Refactor, Coding convention